Stop the log saying "drew 1 cards" and the formats moving about
Two things a visual sweep turned up, both in the parts of the screen a
player looks at most.

The log said "Dev drew 1 cards", eight lines of it, and drawing one card
is the most common thing anybody does - so the most common line in the
whole log was wrong every time. Minecraft's translations have no plural
rule, so the line picks its own key by count and each language writes both,
which is also the only way this works for languages whose plural is not
English's. Milling, revealing and looking got the same treatment.

The guard that says a line carrying a number has to show that number
caught this on the way through, which is the guard doing its job: "drew
Chris cards for 3" fills every placeholder and drops nothing, and only
asking whether the count survived finds it. One is now the single
exception, because "a card" is the same fact as "1 card" in better English
and is exactly why those lines have a key of their own.

The format buttons came up in a different order every launch. They were
indexed into a Map.copyOf, whose iteration order is unspecified and in
practice falls out of a hash salted once per JVM, so nobody could ever
learn where Commander was. The order is a decision now - the ones most
tables play, first - with a test. A seat's counters had the same problem
and are drawn as rows, so they keep the order they arrived in.

The setup screen had no visible way out, which is the gap already closed on
every other panel the table opens.